# nre-app

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 154795a94e5a_accounts_first_migrations.py  38c692900569_first_migration.py  68749be2a2e3_shop_first_migrations.py  7d976b1473a1_id_name_change.py  fd37680f1475_shop_all_tables.py
fontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
fontend/src/: App.jsx  index.css  main.jsx
fontend/src/context/: AuthContext.jsx
fontend/src/data/: mockData.js
fontend/src/pages/: Dashboard.jsx  Inventory.jsx  Login.jsx  POS.jsx  Returns.jsx  Sales.jsx  Shops.jsx  Users.jsx
fontend/src/services/: api.service.js  http.service.js  mock.service.js
fontend/src/utils/: constants.js  helpers.js  toast.js
frontend/: dashboard.html  index.html
frontend/components/: sidebar.html  topbar.html
frontend/css/: custom.css
frontend/js/: api.js  auth.js  components.js  config.js  dashboard.js  layout.js  products.js  shops.js
frontend/pages/: inventory.html  pos.html  products.html  returns.html  sales.html  shops.html
src/: main.py
src/accounts/: dependencies.py  jwt.py  security.py
src/core/: app_logging.py  base.py  bg_logging.py  celery_app.py  config.py  db.py  file_upload.py  route.py
src/seeders/: seed.py
src/shop/: __init__.py
tests/: conftest.py
tests/accounts/: conftest.py  test_auth.py
tests/shop/: conftest.py  test_inventory.py  test_products.py  test_sales.py  test_shops.py
(+103 files in other folders)
